--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "@urql/devtools": "^2.0.3",
     "@urql/exchange-execute": "^2.0.0",
+    "@urql/introspection": "^1.0.0",
     "next": "^10.0.8",
     "next-urql": "^3.0.0",
     "react": "^17.0.1",
